# NSU_PARALLELS

Lab1/: CMakeLists.txt
Lab1/data/plot/: cluster_1.txt  cluster_2.txt  cluster_3.txt  plot_script_var_1.gp
Lab1/src/: CoreUtils.h  main.cpp
Lab2/: CMakeLists.txt
Lab2/data/plot/: plot_script_var_1.gp  plot_script_var_2.gp  var_1_accel.txt  var_1_efficiency.txt  var_1_raw.txt  var_2_accel.txt  var_2_efficiency.txt  var_2_raw.txt
Lab2/src/: CoreUtils.h  main.cpp
Lab3/: CMakeLists.txt
Lab3/src/: CoreUtils.h  main.cpp
Lab4/: CMakeLists.txt
Lab4/data/: stats.txt
Lab4/data/plot/: acceleration.txt  efficiency.txt  plot_script_var.gp  time.txt
Lab4/src/: CoreUtils.h  main.cpp
Lab5/: CMakeLists.txt
Lab5/data/Balanced16/: Log_0.csv  Log_1.csv  Log_10.csv  Log_11.csv  Log_12.csv  Log_13.csv  Log_14.csv  Log_15.csv  Log_2.csv  Log_3.csv  Log_4.csv  Log_5.csv  Log_6.csv  Log_7.csv  Log_8.csv  Log_9.csv  needless_to_say.txt
Lab5/data/Unbalanced16/: Log_0.csv  Log_1.csv  Log_10.csv  Log_11.csv  Log_12.csv  Log_13.csv  Log_14.csv  Log_15.csv  Log_2.csv  Log_3.csv  Log_4.csv  Log_5.csv  Log_6.csv  Log_7.csv  Log_8.csv  Log_9.csv  needless_to_say.txt  plot.py
Lab5/src/: ConcurrentQueue.h  CoreUtils.h  main.cpp
